--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "mongoose-data-seed": "^2.1.6",
     "morgan": "~1.9.1",
+    "request": "^2.88.2",
     "seedgoose": "^2.0.2"
   },
   "seedgoose": {
